--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "licenses-list-generator",
   "version": "0.0.1",
-  "description": "Genarate list of LICENSE files from your all dependencies. To make legal team happy.",
+  "description": "Fetch licences types and texts from all dependencies (and their dependencies) from your project. ",
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint src/*.js",
