--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "node": ">=7.6.0",
     "npm": ">=4.0.0"
   },
+  "keywords": [
+    "license",
+    "licenses",
+    "legal",
+    "OSS"
+  ],
   "author": "Jacek Wasowski",
   "license": "MIT"
 }
