--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "licenses-list-generator",
-  "version": "0.6.0",
+  "version": "0.7.0-beta",
   "description": "Fetch licences types and texts from all dependencies (and their dependencies) from your project.",
   "main": "src/index.js",
   "scripts": {
+    "licenses": "node build/licenses-generator",
     "lint": "eslint src/*.js",
-    "test": "npm run lint",
+    "test": "npm run lint && npm run unit",
     "unit": "jest --config jest.config.json"
   },
   "devDependencies": {
-    "babel-jest": "~23.4.2",
-    "babel-plugin-rewire": "~1.1.0",
-    "babel-plugin-transform-runtime": "~6.23.0",
-    "babel-preset-env": "~1.7.0",
-    "babel-preset-stage-2": "~6.24.1",
-    "eslint": "~5.3.0",
-    "eslint-config-airbnb-base": "~13.0.0",
-    "eslint-plugin-import": "~2.13.0",
-    "eslint-plugin-unicorn": "~5.0.0",
-    "jest": "~23.4.2"
+    "babel-jest": "^23.6.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "chalk": "^2.4.1",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-unicorn": "^6.0.1",
+    "jest": "^23.6.0"
   },
   "engines": {
     "node": ">=7.6.0",
