--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "licenses": "node build/licenses-generator",
     "lint": "eslint src/*.js",
+    "postinstall": "npm run licenses",
     "test": "npm run lint && npm run unit",
     "unit": "jest --config jest.config.json"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1"
   },
   "devDependencies": {
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "chalk": "^2.4.1",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
