--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,14 @@
 {
   "collectCoverage": true,
-  "collectCoverageFrom" : [ "index.js" ],
-  "coverageReporters": [ "json", "html" ]
+  "collectCoverageFrom" : [ "src/index.js" ],
+  "coverageReporters": [ "lcov", "json", "html" ],
+  "verbose": true,
+  "coverageThreshold": {
+    "global": {
+      "branches": 80,
+      "functions": 80,
+      "lines": 80,
+      "statements": 80
+    }
+  }
 }
