Chore: keep npm module free of not needed files
- Do not add test files to the package

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "author": "Jacek Wasowski",
   "files": [
-    "/src"
+    "/src",
+    "!/src/*.test.js"
   ],
   "main": "src/index.js",
   "repository": {
